--- a/_site.yml
+++ b/_site.yml
@@ -1,1 +1,11 @@
 
+name: "my-website"
+output_dir: "."
+navbar:
+  title: "566_FinalProject_YL"
+  left:
+    - text: "Home"
+      href: index.html
+output:
+  html_document:
+    theme: cosmo
